--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,5 @@ sysinfo.txt
 crashlytics-build.properties
 
 UserSettings/EditorUserSettings.asset
+
+Assets/SyntyStudios/PolygonStarter/PolygonPrototype/URP_ExtractMe.unitypackage.meta
